# SuperTimecodeConverter

./: AppSettings.h  ArtnetOutput.h  CMakeLists.txt  DbServerClient.h  GeneratorAudioPlayer.h  GeneratorCuePointEditor.h  GeneratorPresetEditor.h  GeneratorWaveformView.h  GeneratorWaveformWindow.h  Main.cpp  MainComponent.cpp  MainComponent.h  ProDJLinkInput.h  README.md  StageLinQInput.h  TCNetOutput.h  TimecodeEngine.h  btt_build.cpp  build.ps1
